--- a/ML-model-aptitude-test/test.ipynb
+++ b/ML-model-aptitude-test/test.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder"
    ]
   },
   {
@@ -260,6 +261,77 @@
    "source": [
     "df = pd.read_csv(\"./Data/career_pred.csv\")\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extracting the values and labels\n",
+    "data = df.iloc[:49,:-1].values\n",
+    "label = df.iloc[:49,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converting categorical variables into numerical format\n",
+    "labelencoder = LabelEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                         ROLE  Associated Number\n",
+      "0                          Database Developer                  5\n",
+      "1                        Portal Administrator                 14\n",
+      "2              Systems Security Administrator                 22\n",
+      "3                    Business Systems Analyst                  1\n",
+      "4                   Software Systems Engineer                 19\n",
+      "5               Business Intelligence Analyst                  0\n",
+      "6                     CRM Technical Developer                  3\n",
+      "7               Mobile Applications Developer                 12\n",
+      "8                                 UX Designer                 25\n",
+      "9                 Quality Assurance Associate                 17\n",
+      "10                              Web Developer                 26\n",
+      "11               Information Security Analyst                  9\n",
+      "12                       CRM Business Analyst                  2\n",
+      "13                          Technical Support                 24\n",
+      "14                            Project Manager                 16\n",
+      "15             Information Technology Manager                 11\n",
+      "16                         Programmer Analyst                 15\n",
+      "17                                Design & UX                  7\n",
+      "18                        Solutions Architect                 20\n",
+      "19                            Systems Analyst                 21\n",
+      "20             Network Security Administrator                 13\n",
+      "21                             Data Architect                  4\n",
+      "22                         Software Developer                 18\n",
+      "23                         E-Commerce Analyst                  8\n",
+      "24  Technical Services/Help Desk/Tech Support                 23\n",
+      "25             Information Technology Auditor                 10\n",
+      "26                           Database Manager                  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "original=label.unique() \n",
+    "label=label.values\n",
+    "label2 = labelencoder.fit_transform(label)\n",
+    "y=pd.DataFrame(label2,columns=[\"ROLE\"])\n",
+    "numeric=y[\"ROLE\"].unique() \n",
+    "y1 = pd.DataFrame({'ROLE':original, 'Associated Number':numeric})\n",
+    "print(y1)"
    ]
   },
   {
