Categorical data transformation completed successfully

--- a/ML-model-aptitude-test/test.ipynb
+++ b/ML-model-aptitude-test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,52 +286,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                         ROLE  Associated Number\n",
-      "0                          Database Developer                  5\n",
-      "1                        Portal Administrator                 14\n",
-      "2              Systems Security Administrator                 22\n",
-      "3                    Business Systems Analyst                  1\n",
-      "4                   Software Systems Engineer                 19\n",
-      "5               Business Intelligence Analyst                  0\n",
-      "6                     CRM Technical Developer                  3\n",
-      "7               Mobile Applications Developer                 12\n",
-      "8                                 UX Designer                 25\n",
-      "9                 Quality Assurance Associate                 17\n",
-      "10                              Web Developer                 26\n",
-      "11               Information Security Analyst                  9\n",
-      "12                       CRM Business Analyst                  2\n",
-      "13                          Technical Support                 24\n",
-      "14                            Project Manager                 16\n",
-      "15             Information Technology Manager                 11\n",
-      "16                         Programmer Analyst                 15\n",
-      "17                                Design & UX                  7\n",
-      "18                        Solutions Architect                 20\n",
-      "19                            Systems Analyst                 21\n",
-      "20             Network Security Administrator                 13\n",
-      "21                             Data Architect                  4\n",
-      "22                         Software Developer                 18\n",
-      "23                         E-Commerce Analyst                  8\n",
-      "24  Technical Services/Help Desk/Tech Support                 23\n",
-      "25             Information Technology Auditor                 10\n",
-      "26                           Database Manager                  6\n"
+      "                                         ROLE  Category\n",
+      "0                          Database Developer         5\n",
+      "1                        Portal Administrator        14\n",
+      "2              Systems Security Administrator        22\n",
+      "3                    Business Systems Analyst         1\n",
+      "4                   Software Systems Engineer        19\n",
+      "5               Business Intelligence Analyst         0\n",
+      "6                     CRM Technical Developer         3\n",
+      "7               Mobile Applications Developer        12\n",
+      "8                                 UX Designer        25\n",
+      "9                 Quality Assurance Associate        17\n",
+      "10                              Web Developer        26\n",
+      "11               Information Security Analyst         9\n",
+      "12                       CRM Business Analyst         2\n",
+      "13                          Technical Support        24\n",
+      "14                            Project Manager        16\n",
+      "15             Information Technology Manager        11\n",
+      "16                         Programmer Analyst        15\n",
+      "17                                Design & UX         7\n",
+      "18                        Solutions Architect        20\n",
+      "19                            Systems Analyst        21\n",
+      "20             Network Security Administrator        13\n",
+      "21                             Data Architect         4\n",
+      "22                         Software Developer        18\n",
+      "23                         E-Commerce Analyst         8\n",
+      "24  Technical Services/Help Desk/Tech Support        23\n",
+      "25             Information Technology Auditor        10\n",
+      "26                           Database Manager         6\n"
      ]
     }
    ],
    "source": [
-    "original=label.unique() \n",
+    "orignal=label.unique() \n",
     "label=label.values\n",
     "label2 = labelencoder.fit_transform(label)\n",
     "y=pd.DataFrame(label2,columns=[\"ROLE\"])\n",
     "numeric=y[\"ROLE\"].unique() \n",
-    "y1 = pd.DataFrame({'ROLE':original, 'Associated Number':numeric})\n",
-    "print(y1)"
+    "categorized_data = pd.DataFrame({'ROLE':orignal, 'Category':numeric})\n",
+    "print(categorized_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ROLE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Category</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Business Intelligence Analyst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Business Systems Analyst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CRM Business Analyst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CRM Technical Developer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Data Architect</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   ROLE\n",
+       "Category                               \n",
+       "0         Business Intelligence Analyst\n",
+       "1              Business Systems Analyst\n",
+       "2                  CRM Business Analyst\n",
+       "3               CRM Technical Developer\n",
+       "4                        Data Architect"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#setting index and sorting rows\n",
+    "categorized_data.set_index([\"Category\"], inplace = True)\n",
+    "categorized_data.sort_index(inplace = True)\n",
+    "categorized_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Business Intelligence Analyst'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Trying slicing\n",
+    "#categorized_data['ROLE'][0]"
    ]
   },
   {
