Performing feature selection

--- a/ML-model-aptitude-test/test.ipynb
+++ b/ML-model-aptitude-test/test.ipynb
@@ -436,6 +436,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Need to perform feature selection\n",
+    "\n",
+    "There are 2 methods\n",
+    "1. Chi-squared statistic\n",
+    "2. Mutual Information statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing all the necessary libraries\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import chi2\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
