--- a/ML-model-aptitude-test/test.ipynb
+++ b/ML-model-aptitude-test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "4                        Data Architect"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,20 +426,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Business Intelligence Analyst'"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Trying slicing\n",
     "#categorized_data['ROLE'][0]"
@@ -447,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +676,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,14 +723,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing all the necessary libraries\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import chi2\n",
     "import matplotlib.pyplot as plt"
@@ -749,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -867,10 +854,180 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_features(X_train, y_train, X_test):\n",
+    "\tfs = SelectKBest(score_func=chi2,k=k)\n",
+    "\tfs.fit(X_train, y_train)\n",
+    "\tX_train_fs = fs.transform(X_train)\n",
+    "\tX_test_fs = fs.transform(X_test)\n",
+    "\treturn X_train_fs, X_test_fs, fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, fs = select_features(X_train, y_train, X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix,accuracy_score\n",
+    "from xgboost.sklearn import XGBClassifier\n",
+    "from sklearn import tree\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Dec_tree(X_train,y_train,X_test,y_test):\n",
+    "  clf = tree.DecisionTreeClassifier()\n",
+    "  clf = clf.fit(X_train, y_train)\n",
+    "  # Prediction\n",
+    "  y_pred = clf.predict(X_test)\n",
+    "  y_test_arr=y_test\n",
+    "  from sklearn.metrics import confusion_matrix,accuracy_score\n",
+    "  accuracy = accuracy_score(y_test,y_pred)\n",
+    "  print('Model accuracy score with Decision Tree', accuracy_score(y_test, y_pred)*100)\n",
+    "  return accuracy*100,clf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xgboost(X_train,y_train,X_test,y_test,clf):\n",
+    "  #X_train,X_test,y_train,y_test=train_test_split(X1,y,test_size=0.3,random_state=10)\n",
+    "  shape = X_train.shape\n",
+    "  X_train=pd.to_numeric(X_train.values.flatten())\n",
+    "  X_train=X_train.reshape(shape)\n",
+    "  model = XGBClassifier()\n",
+    "  model.fit(X_train, y_train)\n",
+    "  xgb_y_pred  = clf.predict(X_test)\n",
+    "  xgb_accuracy = accuracy_score(y_test,xgb_y_pred)\n",
+    "  print(\"accuracy=\",xgb_accuracy*100)\n",
+    "  return xgb_accuracy*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Without feature Selection : \n",
+      "Model accuracy score with Decision Tree 2.933333333333333\n",
+      "With feature Selection : \n",
+      "Model accuracy score with Decision Tree 3.0166666666666666\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Without feature Selection : \")\n",
+    "acc1,clf1 = Dec_tree(X_train1,y_train,X_test1,y_test)\n",
+    "\n",
+    "\n",
+    "print(\"With feature Selection : \")\n",
+    "acc,clf = Dec_tree(X_train,y_train,X_test,y_test)\n",
+    "\n",
+    "print(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boosting the Decision Tree  \n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\annar\\OneDrive\\Desktop\\Visual Studio\\GitHub\\SIH\\Career-Guidance\\ML-model-aptitude-test\\test.ipynb Cell 23\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/Career-Guidance/ML-model-aptitude-test/test.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mBoosting the Decision Tree  \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/Career-Guidance/ML-model-aptitude-test/test.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m acc \u001b[39m=\u001b[39m xgboost(X_train,y_train,X_test,y_test,clf)\n",
+      "\u001b[1;32mc:\\Users\\annar\\OneDrive\\Desktop\\Visual Studio\\GitHub\\SIH\\Career-Guidance\\ML-model-aptitude-test\\test.ipynb Cell 23\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/Career-Guidance/ML-model-aptitude-test/test.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mxgboost\u001b[39m(X_train,y_train,X_test,y_test,clf):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/Career-Guidance/ML-model-aptitude-test/test.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m   \u001b[39m#X_train,X_test,y_train,y_test=train_test_split(X1,y,test_size=0.3,random_state=10)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/Career-Guidance/ML-model-aptitude-test/test.ipynb#X31sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m   shape \u001b[39m=\u001b[39m X_train\u001b[39m.\u001b[39mshape\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/Career-Guidance/ML-model-aptitude-test/test.ipynb#X31sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m   X_train\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mto_numeric(X_train\u001b[39m.\u001b[39;49mvalues\u001b[39m.\u001b[39mflatten())\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/Career-Guidance/ML-model-aptitude-test/test.ipynb#X31sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m   X_train\u001b[39m=\u001b[39mX_train\u001b[39m.\u001b[39mreshape(shape)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/Career-Guidance/ML-model-aptitude-test/test.ipynb#X31sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m   model \u001b[39m=\u001b[39m XGBClassifier()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Boosting the Decision Tree  \")\n",
+    "acc = xgboost(X_train,y_train,X_test,y_test,clf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acedamic percentage in Operating Systems\n",
+      "percentage in Algorithms\n",
+      "Percentage in Programming Concepts\n",
+      "Percentage in Software Engineering\n",
+      "Percentage in Computer Networks\n",
+      "Percentage in Electronics Subjects\n",
+      "Percentage in Computer Architecture\n",
+      "Percentage in Mathematics\n"
+     ]
+    }
+   ],
+   "source": [
+    "# x_new = ['3','5','4','3','5','4','3','5','2','2','5','2','5','4','2','5','5','3','2','5','5','4','2','3','4']\n",
+    "x_new = []\n",
+    "feat = list(X.columns) \n",
+    "for i in feat:\n",
+    "  print(i)\n",
+    "  val = input(\"Enter: \") \n",
+    "  x_new.append(val)\n",
+    "x_new"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_pred  = clf.predict([x_new])\n",
+    "print(\"Prediction : {}\".format(categorized_data[categorized_data['Associated Number']==new_pred[0]]['ROLE']))"
+   ]
   }
  ],
  "metadata": {
