--- a/Aptitude-test/career.ipynb
+++ b/Aptitude-test/career.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,73 +545,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([46, 14, 52, 20, 34, 26, 41, 13, 21,  0, 33, 45, 23, 10, 36, 38,  7,\n",
+       "       37, 27, 17, 42, 16,  1, 19, 53, 29, 44,  6, 15, 18,  8, 30,  2,  3,\n",
+       "       51,  9, 24, 31, 32, 39, 54, 12, 50, 35, 25, 49,  5,  4, 43, 48, 47,\n",
+       "       11, 40, 22, 28])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "#model building\n",
     "from sklearn.metrics import confusion_matrix,accuracy_score\n",
     "from xgboost.sklearn import XGBClassifier\n",
-    "from sklearn import tree\n"
+    "from sklearn import tree\n",
+    "from sklearn.metrics import confusion_matrix,accuracy_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Dec_tree(X_train,y_train,X_test,y_test):\n",
-    "  clf = tree.DecisionTreeClassifier()\n",
-    "  clf = clf.fit(X_train, y_train)\n",
-    "  # Prediction\n",
-    "  y_pred = clf.predict(X_test)\n",
-    "  y_test_arr=y_test\n",
-    "  from sklearn.metrics import confusion_matrix,accuracy_score\n",
-    "  accuracy = accuracy_score(y_test,y_pred)\n",
-    "  print('Model accuracy score with Decision Tree', accuracy_score(y_test, y_pred)*100)\n",
-    "  return accuracy*100,clf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def xgboost(X_train,y_train,X_test,y_test,clf):\n",
-    "  #X_train,X_test,y_train,y_test=train_test_split(X1,y,test_size=0.3,random_state=10)\n",
-    "  shape = X_train.shape\n",
-    "  X_train=pd.to_numeric(X_train.values.flatten())\n",
-    "  X_train=X_train.reshape(shape)\n",
-    "  model = XGBClassifier()\n",
-    "  model.fit(X_train, y_train)\n",
-    "  xgb_y_pred  = clf.predict(X_test)\n",
-    "  xgb_accuracy = accuracy_score(y_test,xgb_y_pred)\n",
-    "  print(\"accuracy=\",xgb_accuracy*100)\n",
-    "  return xgb_accuracy*100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with Decision Tree 7.4074074074074066\n"
+      "Model accuracy score with Decision Tree 3.7037037037037033\n"
      ]
     }
    ],
    "source": [
-    "acc1,clf = Dec_tree(X_train,y_train,X_test,y_test)"
+    "#decsion tree model\n",
+    "clf = tree.DecisionTreeClassifier()\n",
+    "clf = clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test,y_pred)\n",
+    "print('Model accuracy score with Decision Tree', accuracy*100)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -621,8 +613,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\annar\\OneDrive\\Desktop\\Visual Studio\\GitHub\\SIH\\CareerWise\\Aptitude-test\\career.ipynb Cell 15\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m xgboost(X_train,y_train,X_test,y_test,clf)\n",
-      "\u001b[1;32mc:\\Users\\annar\\OneDrive\\Desktop\\Visual Studio\\GitHub\\SIH\\CareerWise\\Aptitude-test\\career.ipynb Cell 15\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X25sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m X_train\u001b[39m=\u001b[39mX_train\u001b[39m.\u001b[39mreshape(shape)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m model \u001b[39m=\u001b[39m XGBClassifier()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X25sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m model\u001b[39m.\u001b[39;49mfit(X_train, y_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X25sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m xgb_y_pred  \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X25sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m xgb_accuracy \u001b[39m=\u001b[39m accuracy_score(y_test,xgb_y_pred)\n",
+      "\u001b[1;32mc:\\Users\\annar\\OneDrive\\Desktop\\Visual Studio\\GitHub\\SIH\\CareerWise\\Aptitude-test\\career.ipynb Cell 14\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Xgboost model\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m model \u001b[39m=\u001b[39m XGBClassifier()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m model\u001b[39m.\u001b[39;49mfit(X_train,y_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m y_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/annar/OneDrive/Desktop/Visual%20Studio/GitHub/SIH/CareerWise/Aptitude-test/career.ipynb#X34sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m accuracy \u001b[39m=\u001b[39m accuracy_score(y_test, y_pred)\n",
       "File \u001b[1;32mc:\\Users\\annar\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\xgboost\\core.py:620\u001b[0m, in \u001b[0;36mrequire_keyword_args.<locals>.throw_if.<locals>.inner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    618\u001b[0m \u001b[39mfor\u001b[39;00m k, arg \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(sig\u001b[39m.\u001b[39mparameters, args):\n\u001b[0;32m    619\u001b[0m     kwargs[k] \u001b[39m=\u001b[39m arg\n\u001b[1;32m--> 620\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[1;32mc:\\Users\\annar\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\xgboost\\sklearn.py:1440\u001b[0m, in \u001b[0;36mXGBClassifier.fit\u001b[1;34m(self, X, y, sample_weight, base_margin, eval_set, eval_metric, early_stopping_rounds, verbose, xgb_model, sample_weight_eval_set, base_margin_eval_set, feature_weights, callbacks)\u001b[0m\n\u001b[0;32m   1435\u001b[0m     expected_classes \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_classes_)\n\u001b[0;32m   1436\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   1437\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_\u001b[39m.\u001b[39mshape \u001b[39m!=\u001b[39m expected_classes\u001b[39m.\u001b[39mshape\n\u001b[0;32m   1438\u001b[0m     \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_ \u001b[39m==\u001b[39m expected_classes)\u001b[39m.\u001b[39mall()\n\u001b[0;32m   1439\u001b[0m ):\n\u001b[1;32m-> 1440\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1441\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mInvalid classes inferred from unique values of `y`.  \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1442\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mExpected: \u001b[39m\u001b[39m{\u001b[39;00mexpected_classes\u001b[39m}\u001b[39;00m\u001b[39m, got \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1443\u001b[0m     )\n\u001b[0;32m   1445\u001b[0m params \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_xgb_params()\n\u001b[0;32m   1447\u001b[0m \u001b[39mif\u001b[39;00m callable(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobjective):\n",
       "\u001b[1;31mValueError\u001b[0m: Invalid classes inferred from unique values of `y`.  Expected: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45], got [ 0  1  2  4  5  6  7  8  9 10 11 13 14 15 17 18 19 20 21 22 23 26 27 29\n 30 31 32 33 34 35 37 38 39 41 42 43 44 45 46 47 48 49 50 52 53 54]"
@@ -630,15 +621,53 @@
     }
    ],
    "source": [
-    "xgboost(X_train,y_train,X_test,y_test,clf)"
+    "#Xgboost model\n",
+    "model = XGBClassifier()\n",
+    "model.fit(X_train,y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print('Model accuracy score with Decision Tree', accuracy*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(63, 11)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(63,)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
   }
  ],
  "metadata": {
