--- a/Aptitude-test/personality.ipynb
+++ b/Aptitude-test/personality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4              70           serious  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "       ['lively']], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "       [2]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['dependable', 0],\n",
+       "       ['serious', 4],\n",
+       "       ['responsible', 3],\n",
+       "       ['extraverted', 1],\n",
+       "       ['lively', 2]], dtype=object)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +359,7 @@
        "4       lively  2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +509,7 @@
        "4              70                  4  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,27 +570,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\annar\\AppData\\Local\\Temp\\ipykernel_9024\\3543414343.py:2: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "C:\\Users\\annar\\AppData\\Local\\Temp\\ipykernel_37932\\3543414343.py:2: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  model.fit(X_train,y_train)\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,16 +611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 0, 2, 1, 0, 0, 3, 3, 4, 2, 4, 0, 2, 3, 0, 3], dtype=int64)"
+       "array([3, 0, 2, 1, 0, 0, 3, 3, 4, 2, 4, 0, 2, 3, 0, 3])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +747,7 @@
        "45                  3"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +776,7 @@
        "1.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -771,11 +795,10 @@
       "text/plain": [
        "array([0, 1, 3, 0, 4, 4, 3, 2, 4, 2, 3, 4, 1, 4, 1, 4, 2, 3, 0, 4, 1, 3,\n",
        "       4, 0, 1, 0, 2, 0, 0, 3, 1, 1, 2, 0, 1, 0, 3, 2, 4, 1, 0, 4, 0, 2,\n",
-       "       2, 1, 2, 3, 4, 0, 4, 2, 4, 4, 2, 1, 3, 0, 4, 3, 3, 1, 4, 1],\n",
-       "      dtype=int64)"
+       "       2, 1, 2, 3, 4, 0, 4, 2, 4, 4, 2, 1, 3, 0, 4, 3, 3, 1, 4, 1])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,39 +809,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from joblib import dump,load"
+    "import pickle\n",
+    "Pkl_file = 'pickle_model'\n",
+    "with open(Pkl_file, 'wb') as file:\n",
+    "    pickle.dump(model,file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pkl_file = 'pickle_model'\n",
+    "with open(Pkl_file, 'rb') as file:\n",
+    "    classifier=pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['personality_model.joblib']"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\annar\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:420: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
-    "dump(model, 'personality_model.joblib')"
+    "input = np.array([18,  0,  2, 80, 75, 85, 90, 80, 70])\n",
+    "input = input.reshape(1,-1)\n",
+    "pred = classifier.predict(input)\n",
+    "print(pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
